@@ -25,6 +25,7 @@ K  7150	Make IMAPProtocol.handleLoginResult protected
 K  7151	InternetAddress.parse fails for valid domain literal address
 K  7238	unsolicited FETCH response *must* invalidate X-GM-LABELS in cache
 K  7332	MimeBodyPart.isMimeType returns false if type header can't be parsed
+K  7356	NPE in Tomcat ClassLoader causes Session.getInstance to fail
 
 
 		  CHANGES IN THE 1.5.5 RELEASE
